fixed sidebar alignment

--- a/themes/pelican-cait/static/css/blog.css
+++ b/themes/pelican-cait/static/css/blog.css
@@ -20,6 +20,7 @@ body {
     text-decoration: none; }
 
 #site-title {
+  text-align: center;
   font-family: "Oswald", sans-serif;
   font-size: 2em;
   -webkit-transition: all 0.3s;
@@ -41,6 +42,7 @@ body {
   overflow-wrap: break-word; }
 
 #nav-links {
+  text-align: center;
   list-style: none;
   padding: 0;
   font-family: "Oswald", sans-serif;
